--- a/gb/20/5/28/n12143491.md
+++ b/gb/20/5/28/n12143491.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/roz252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/roz252/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/roz252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/roz252/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/roz252/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/roz252/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/roz252/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/roz252/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/roz252/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/roz252/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/roz252/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国新制裁成致命打击 英国5G或弃用华为</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-1140098862-600x400.jpg" />
 <h6>华为位于Reading的办公楼。（ADRIAN DENNIS/AFP via Getty Images)
 </h6>
 <hr>
-<p>【大纪元2020年05月28日讯】（大纪元<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD.md#1">英国</a>记者站报导）媒体披露，中共病毒疫情以及美国近日对<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>最新的制裁决定促使英国首相约翰逊重新考虑华为问题，他可能会宣布英国的5G网络将不再使用华为的设备。同时政府还会制定计划，取消对中国产品的依赖。</p>
-<p><ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD.md#1">英国</a>政府消息人士对《星期日邮报》披露，美国最新做出的制裁<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>的决定意味着华为设备的质量将很难得到保证，英国可能因此拒绝使用华为的设备。</p>
+<p>【大纪元2020年05月28日讯】（大纪元<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD.md#1">英国</a>记者站报导）媒体披露，中共病毒疫情以及美国近日对<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>最新的制裁决定促使英国首相约翰逊重新考虑华为问题，他可能会宣布英国的5G网络将不再使用华为的设备。同时政府还会制定计划，取消对中国产品的依赖。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD.md#1">英国</a>政府消息人士对《星期日邮报》披露，美国最新做出的制裁<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%8E%E4%B8%BA.md#1">华为</a>的决定意味着华为设备的质量将很难得到保证，英国可能因此拒绝使用华为的设备。</p>
 <p>上周二（5月19日）英国政府召开国家安全委员会会议，这是今年2月以来第一次开会。会议的内容是讨论英国的供应链对于外国的依赖。</p>
 <p>会议上，英国情报部门的负责人警告，美国的新制裁意味着华为使用的替代产品将无法得到英国的信任，因此英国可能会取消让华为参与本国5G网络的决定。</p>
 <p>消息人士说：“我们认为，美国对华为施加的新的制裁基本上意味着华为芯片的生产过程中将不再可以使用美国的知识产权。……他们（华为）可能会转向使用比价便宜、不那么安全的当地产品。我们几乎不可能说这些产品可以安全地使用在5G网络。这会彻底改变我们的考虑。”</p>
@@ -17,10 +17,10 @@
 <p>美国新的制裁禁止华为在设计半导体的时候使用美国的技术和软件，因为美国商业部担心，华为可能违反了去年的禁令，通过其它国家的工厂使用美国的半导体制造设备。</p>
 <p>亨利·杰克逊学会亚洲研究中心主任马修·亨德森（Matthew Henderson）说：“由于议会和我们盟友的众多反对声音，这次（NCSC）审查是在承认政府先前对华为的立场是站不住脚的。”</p>
 <h2>三年内杜绝华为</h2>
-<p>《每日电讯报》披露，首相约翰逊已经要求政府官员制定计划，减少<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD5g.md#1">英国5G</a>网络中的华为设备，在三年内将华为设备降低至零。</p>
+<p>《每日电讯报》披露，首相约翰逊已经要求政府官员制定计划，减少<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD5g.md#1">英国5G</a>网络中的华为设备，在三年内将华为设备降低至零。</p>
 <p>还有消息人士对《每日邮报》表示，约翰逊希望继续跟中国保持关系，但是“华为协议的规模将会显着缩小”，“已经要求官员们制定计划，尽快减少华为的参与”。</p>
 <p>消息人士还说：“他（约翰逊）在这个问题上已经听到了他自己党派议员的许多意见，跟他们有同样的担忧。整个协议是在（中共病毒）流行前签署的，但是冠状病毒改变了所有的一切。”</p>
-<p>中共病毒给英国带来巨大损失，导致几万英国人死亡，这促使许多保守党议员呼吁首相减少对中国产品的依赖，重新考虑允许华为参与<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD5g.md#1">英国5G</a>网络的决定。</p>
+<p>中共病毒给英国带来巨大损失，导致几万英国人死亡，这促使许多保守党议员呼吁首相减少对中国产品的依赖，重新考虑允许华为参与<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B1%E5%9B%BD5g.md#1">英国5G</a>网络的决定。</p>
 <p>英国此前决定，允许华为参与5G网络，但是使用华为的设备不会超过35%，而且不会用在关键的跟国家安全有关的地点附近。</p>
 <p>多位保守党议员认为，这个决定“很匆忙”，而且华为的中共背景意味着其可能会利用设备从事间谍活动，英国的做法也会引发盟友、尤其是“五眼”情报联盟的盟友的不满。</p>
 <p>下议院外交事务委员会的主席图根哈特（Tom Tugendhat）对BBC表示，允许华为参与英国的5G“非常成问题”，这相当于把几十亿镑放到中共手中，因为这家公司“实际上是中国共产党拥有的”。</p>
@@ -31,42 +31,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/21/n12126010.md#1">华为资助英国名校新校区 议员担忧</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/23/n12131960.md#1">政策大逆转？传英国计划3年内弃华为5G网络</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12134110.md#1">彭定康吁英国将港版国安法列入G7议程</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12134117.md#1">英国智库建议五眼联盟与中共脱钩</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12135904.md#1">张菁：英国排斥华为 中共“网络超限战”受挫</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12136137.md#1">英国网络安全审查 料将终结华为5G交易</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138040.md#1">严重违反公正性 中共大外宣或遭英国制裁</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/27/n12139853.md#1">英国超跑制造商迈凯伦将裁员25%</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/28/n12143517.md#1">改变对华政策 英国政界众望所归</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/28/n12143511.md#1">英国制定计划 减少对华进口产品依赖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/21/n12126010.md#1">华为资助英国名校新校区 议员担忧</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/23/n12131960.md#1">政策大逆转？传英国计划3年内弃华为5G网络</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/25/n12134110.md#1">彭定康吁英国将港版国安法列入G7议程</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/25/n12134117.md#1">英国智库建议五眼联盟与中共脱钩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/25/n12135904.md#1">张菁：英国排斥华为 中共“网络超限战”受挫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/25/n12136137.md#1">英国网络安全审查 料将终结华为5G交易</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/26/n12138040.md#1">严重违反公正性 中共大外宣或遭英国制裁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/27/n12139853.md#1">英国超跑制造商迈凯伦将裁员25%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13602463.md#1">跟病毒共存 英国将取消隔离规定</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/24/n13602479.md#1">防止外国人洗钱 英国取消投资移民</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/25/n9992657.md#1" target="_blank">林辉：贾宝玉林黛玉扮演者曾被叫“阿飞”</a></li><li><a href="https://github.com/roz252/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/18/n3685199.md#1" target="_blank">难以置信的事实</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/10/n9943237.md#1" target="_blank">林辉：上了中共当的“一二九”学生运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/27/n10744431.md#1" target="_blank">顽疾绝症不医而愈 小小少年们的神奇际遇</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138645.md#1">【内幕】病毒攻陷舒兰市公安局的过程</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138369.md#1">股王大立光撤出苏州 汇回台湾3亿多美金</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138581.md#1">中共外交公文曝光 “台湾万岁”成推特热词</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12136657.md#1">影帝吴朋奉在家倒地猝逝 享年55岁</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/20/n12122612.md#1">【传奇时代】芬兰“天籁之声” 唱出中国人权希望</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/24/n12133296.md#1">浮生行吟：读书笔记——莎士比亚《人生的七个阶段》</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/roz252/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/roz252/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/28/n12143491.htm">美国新制裁成致命打击 英国5G或弃用华为</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/5/28/n12143491.htm">美国新制裁成致命打击 英国5G或弃用华为</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/roz252/djy/blob/master/gb/20/5/28/n12143491.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/roz252/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/roz252/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/roz252/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/20/5/28/n12143491.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
